Fix some browsers not showing dispatch details page, call log form not collecting all data points

--- a/app/assets/stylesheets/incidents/incidents.css.scss
+++ b/app/assets/stylesheets/incidents/incidents.css.scss
@@ -74,3 +74,7 @@ table tr.collapse.in {
 table tbody.collapse.in {
   display: table-row-group;
 }
+
+.dispatch-button {
+  margin: 1em 0;
+}
